Fix issue of title cut-off on smaller windows
This commit fixes the issue of the title being cut-off on smaller
windows as reported in #53

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -35,6 +35,11 @@ body {
   background: $background;
   color: $foreground;
   @extend .jetbrains-mono;
+
+  @media screen and (max-height: 501px) {
+    display: block;
+    height: 100vh;
+  }
 }
 
 .main {
